--- a/strategic-position-renewal.html
+++ b/strategic-position-renewal.html
@@ -110,7 +110,13 @@
 
     <div class="container mx-auto px-4 py-8">
         
-        <header class="text-center mb-8">
+        <header class="text-center mb-8 relative">
+            <a href="./portal-home.html" class="absolute top-0 left-0 bg-slate-200 text-slate-700 px-4 py-2 rounded-lg hover:bg-slate-300 transition flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-5 h-5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
+                </svg>
+                Back to Home
+            </a>
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900">Business Strategy Concepts</h1>
             <p class="text-lg text-slate-600 mt-2">Explore core ideas in strategic positioning and renewal.</p>
         </header>
