--- a/portal-home.html
+++ b/portal-home.html
@@ -27,7 +27,7 @@
         </header>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-            <a href="./strategy-concepts.html" class="card bg-white p-8 rounded-lg shadow-lg flex flex-col items-center justify-center text-center hover:no-underline">
+            <a href="./strategic-position-renewal.html" class="card bg-white p-8 rounded-lg shadow-lg flex flex-col items-center justify-center text-center hover:no-underline">
                 <div class="bg-sky-100 p-4 rounded-full mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 text-sky-600">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.172-.879-1.172-2.303 0-3.182s2.913-.879 4.085 0A3.004 3.004 0 0 0 12 6" />
