--- a/portal-home.html
+++ b/portal-home.html
@@ -48,6 +48,16 @@
             </a>
         </div>
     </div>
-
+    <a href="./competitive-advantage-deep-dive.html" class="card bg-white p-8 rounded-lg shadow-lg flex flex-col items-center justify-center text-center hover:no-underline">
+                <div class="bg-purple-100 p-4 rounded-full mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12 text-purple-600">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L13.5 21.75 15 13.5H3.75Z" />
+                    </svg>
+                </div>
+                <h2 class="text-2xl font-bold text-slate-800 mb-2">Competitive Advantage Deep Dive</h2>
+                <p class="text-slate-600">Explore the definition, sources (activities, resources, capabilities), and methods for sustaining competitive advantage over time.</p>
+    </a>
+    <footer class="mt-12 text-slate-500 text-sm">
+        <p>&copy; 2025 Business Strategy Portal. All rights reserved.</p>
 </body>
 </html>
