Refactor code structure for improved readability and maintainability

--- a/Business-Strategy/competitive-advantage-deep-dive.html
+++ b/Business-Strategy/competitive-advantage-deep-dive.html
@@ -103,7 +103,7 @@
 
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         
-        <header class="text-center mb-8 relative">
+        <header class="text-center mb-8 relative pt-12"> <!-- Added pt-12 here -->
             <a href="./portal-home.html" class="absolute top-0 left-0 bg-slate-200 text-slate-700 px-4 py-2 rounded-lg hover:bg-slate-300 transition flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-5 h-5">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
@@ -146,9 +146,9 @@
                 
                 <h3 class="text-xl font-semibold text-slate-800 mt-6 mb-3">Key Concepts:</h3>
                 <ul class="list-disc list-inside text-slate-700 space-y-2">
-                    <li><strong>Firm vs. Industry Effects:</strong> Research indicates that firm-specific attributes (company effects) are a much more significant factor in explaining profit performance (predicting nearly 80% of explained differences) than industry characteristics.</li>
-                    <li><strong>Economic Value Added (EVA):</strong> Conceptually, EVA is the difference between the value generated and the cost incurred by the company for the average customer. It highlights a firm's ability to undercut competitors while still making a profit. While valuable in theory, precise measurement can be challenging.</li>
-                    <li><strong>Measuring Performance:</strong> While accounting profits (ROA, ROE) are readily available, they are backward-looking. Stock market valuations reflect future prospects but may not capture tacit internal information. NPV projections offer a planning scenario but can be complex. Triangulating across different measures provides a more holistic view.</li>
+                    <li><strong>Firm vs. Industry Effects:</strong> Research indicates that firm-specific attributes (company effects) are a much more significant factor in explaining profit performance (predicting nearly 80% of explained differences) than industry characteristics. <em>Example: Apple's consistent profitability in the highly competitive consumer electronics industry highlights strong firm effects over general industry trends.</em></li>
+                    <li><strong>Economic Value Added (EVA):</strong> Conceptually, EVA is the difference between the value generated and the cost incurred by the company for the average customer. It highlights a firm's ability to undercut competitors while still making a profit. While valuable in theory, precise measurement can be challenging. <em>Example: A luxury car manufacturer with high production costs but an even higher perceived value by customers demonstrates positive EVA.</em></li>
+                    <li><strong>Measuring Performance:</strong> While accounting profits (ROA, ROE) are readily available, they are backward-looking. Stock market valuations reflect future prospects but may not capture tacit internal information. NPV projections offer a planning scenario but can be complex. Triangulating across different measures provides a more holistic view. <em>Example: Using a combination of ROA, market share growth, and customer satisfaction surveys provides a more complete picture of performance than any single metric.</em></li>
                     <li><strong>Sustained Competitive Advantage:</strong> The ultimate goal of strategy is to develop and maintain an advantage over time. This raises questions about the origins of inter-firm differences (heterogeneity) and how these advantages can be made durable.</li>
                 </ul>
             </section>
@@ -164,8 +164,8 @@
                         <h4 class="font-bold text-lg text-purple-700 mb-2">The Value Chain (Manufacturing)</h4>
                         <p class="text-slate-600 text-sm mb-2">A sequential representation of value-adding steps in manufacturing. It organizes activities into:</p>
                         <ul class="list-disc list-inside text-slate-600 text-sm ml-4">
-                            <li><strong>Primary Activities:</strong> Inbound logistics, operations (production), outbound logistics, marketing & sales, after-sales service.</li>
-                            <li><strong>Support Activities:</strong> R&D, information systems, accounting & finance, human resources, procurement, corporate infrastructure.</li>
+                            <li><strong>Primary Activities:</strong> Inbound logistics (e.g., efficient material handling at Amazon warehouses), operations (e.g., Toyota's lean manufacturing system), outbound logistics (e.g., FedEx's global delivery network), marketing & sales (e.g., Nike's 'Just Do It' campaigns), after-sales service (e.g., Tesla's mobile service units).</li>
+                            <li><strong>Support Activities:</strong> R&D (e.g., pharmaceutical drug discovery), human resources (e.g., Google's talent acquisition and retention programs), procurement (e.g., Walmart's bulk purchasing power), corporate infrastructure (e.g., efficient finance and accounting systems).</li>
                         </ul>
                         <p class="text-slate-600 text-xs mt-2 italic">Useful for analyzing material flow and synergies between primary activities.</p>
                     </div>
@@ -174,7 +174,7 @@
                         <p class="text-slate-600 text-sm mb-2">A non-sequential map of important sets of activities and their interrelationships, more suited for service industries (e.g., airlines, healthcare). Key features:</p>
                         <ul class="list-disc list-inside text-slate-600 text-sm ml-4">
                             <li>Activities are not linear but interconnected.</li>
-                            <li>Categories and connections are highly customized to the company/industry.</li>
+                            <li>Categories and connections are highly customized to the company/industry. <em>Example: An airline's route planning, flight operations, and customer service are highly interconnected, but not sequential in the way a manufacturing line is.</em></li>
                             <li>Strategists must discern and illustrate these relationships.</li>
                         </ul>
                         <p class="text-slate-600 text-xs mt-2 italic">Provides a clearer, more explicit view of complex service operations.</p>
@@ -184,8 +184,8 @@
                 <h3 class="text-xl font-semibold text-slate-800 mt-8 mb-3">2.2 Resources</h3>
                 <p class="text-slate-700 mb-2">Resources are productive, firm-specific assets owned by a company. They can be broadly categorized:</p>
                 <ul class="list-disc list-inside text-slate-700 space-y-2 mb-4">
-                    <li><strong>Tangible:</strong> Financial (cash, borrowing capacity), Physical (buildings, machinery, real estate).</li>
-                    <li><strong>Intangible:</strong> Technology (product designs, know-how), Relationships (reputation, customer/supplier networks), Human Capital (talent, skills, organization).</li>
+                    <li><strong>Tangible:</strong> Financial (e.g., Microsoft's vast cash reserves), Physical (e.g., Marriott's extensive global hotel properties).</li>
+                    <li><strong>Intangible:</strong> Technology (e.g., Google's proprietary search algorithms), Relationships (e.g., Coca-Cola's unparalleled brand loyalty, Salesforce's vast network of CRM partnerships), Human Capital (e.g., Pixar's renowned animation talent, top-tier scientific researchers at a biotech firm).</li>
                 </ul>
                 <p class="text-slate-700 mb-4">Increasingly, intangible resources are more critical for creating economic value and differentiating firms, as tangible assets have become more accessible.</p>
 
@@ -212,11 +212,11 @@
                 <h3 class="text-xl font-semibold text-slate-800 mt-8 mb-3">2.3 Capabilities</h3>
                 <p class="text-slate-700 mb-2">A capability is the capacity to perform a particular activity in a reliable and satisfactory manner. It involves the deployment, combination, and linking of various resources.</p>
                 <ul class="list-disc list-inside text-slate-700 space-y-2">
-                    <li><strong>Capacity to Do:</strong> Firms have capabilities to perform specific activities (e.g., product development, viral marketing). Talent alone (resources) is not a capability.</li>
+                    <li><strong>Capacity to Do:</strong> Firms have capabilities to perform specific activities (e.g., product development, viral marketing). Talent alone (resources) is not a capability. <em>Example: Apple's renowned capability for seamless product development, leading to consistent iPhone launches.</em></li>
                     <li><strong>Reliability:</strong> The ability to repeatedly perform an activity consistently.</li>
                     <li><strong>Execution Level:</strong> A capability means satisfactory execution; superlative performance is an advantage, but not a minimum requirement.</li>
                     <li><strong>Development & Learning:</strong> Capabilities develop through learning embedded in organizational routines and processes.</li>
-                    <li><strong>Cross-functional:</strong> Often span multiple functional areas (e.g., marketing, product development).</li>
+                    <li><strong>Cross-functional:</strong> Often span multiple functional areas (e.g., marketing, product development). <em>Example: A company's "customer service excellence" capability relies on coordinated efforts across sales, support, and technical teams.</em></li>
                 </ul>
                 <p class="text-slate-700 mt-4">The choice of analytical lens (Activities, Resources, or Capabilities) depends on the desired level of detail and summarization for understanding a firm's internal strengths.</p>
             </section>
@@ -229,16 +229,16 @@
                     <div class="bg-stone-50 p-4 rounded-lg border border-stone-200">
                         <h4 class="font-bold text-lg text-purple-700 mb-2">Threats to Rarity (Imitation & Replication)</h4>
                         <ul class="list-disc list-inside text-slate-600 text-sm ml-4 space-y-1">
-                            <li><strong>Imitation:</strong> Other firms copy your exact processes/routines.</li>
-                            <li><strong>Replication:</strong> Other firms achieve similar results using different processes.</li>
+                            <li><strong>Imitation:</strong> Other firms copy your exact processes/routines. <em>Example: A competitor attempting to replicate a successful software feature by reverse-engineering it.</em></li>
+                            <li><strong>Replication:</strong> Other firms achieve similar results using different processes. <em>Example: A new entrant achieving similar cost efficiency through entirely different operational methods.</em></li>
                         </ul>
                         <p class="text-slate-600 text-sm mt-2">Firms need barriers (isolating mechanisms) to prevent rivals from acquiring or developing similar advantages.</p>
                     </div>
                     <div class="bg-stone-50 p-4 rounded-lg border border-stone-200">
                         <h4 class="font-bold text-lg text-purple-700 mb-2">Threats to Value Creation (Non-Durability & Irrelevance)</h4>
                         <ul class="list-disc list-inside text-slate-600 text-sm ml-4 space-y-1">
-                            <li><strong>Non-Durability:</strong> Internal strengths (capabilities, resources, routines) degrade over time (the "leaky bucket").</li>
-                            <li><strong>Irrelevance:</strong> Existing advantages become less useful in a changing environment, potentially becoming "core rigidities" (competency trap).</li>
+                            <li><strong>Non-Durability:</strong> Internal strengths (capabilities, resources, routines) degrade over time (the "leaky bucket"). <em>Example: A technological advantage becoming obsolete due to rapid innovation by competitors.</em></li>
+                            <li><strong>Irrelevance:</strong> Existing advantages become less useful in a changing environment, potentially becoming "core rigidities" (competency trap). <em>Example: Blockbuster's inability to adapt its physical store model to the rise of video streaming services.</em></li>
                         </ul>
                         <p class="text-slate-600 text-sm mt-2">Requires continuous preservation and renewal of strengths.</p>
                     </div>
@@ -246,12 +246,12 @@
 
                 <h3 class="text-xl font-semibold text-slate-800 mt-8 mb-3">3.1 Isolating Mechanisms (Barriers to Imitation)</h3>
                 <ul class="list-disc list-inside text-slate-700 space-y-2">
-                    <li><strong>Causal Ambiguity:</strong> When rivals cannot precisely identify the source of a firm's success (e.g., is it culture, leadership, or specific processes?).</li>
-                    <li><strong>Complexity:</strong> Even if elements are known, their precise combination is difficult to replicate without subtle errors.</li>
-                    <li><strong>Tacit Knowledge:</strong> Knowledge that is hard to explain or transfer, learned best by doing under expert guidance.</li>
-                    <li><strong>Resource Mobility Barriers:</strong> Factors preventing key resources (talented employees, crucial suppliers) from being lured away by competitors.</li>
-                    <li><strong>Property Rights:</strong> Legal protections (patents, copyrights) or exclusive access to physical resources (mining rights, real estate).</li>
-                    <li><strong>Activity Systems:</strong> The inherent complexity and interconnectedness of a firm's unique activity system makes it difficult for rivals to copy.</li>
+                    <li><strong>Causal Ambiguity:</strong> When rivals cannot precisely identify the source of a firm's success (e.g., is it culture, leadership, or specific processes?). <em>Example: Southwest Airlines' sustained success is often attributed to a unique blend of culture, operations, and employee relations that is hard for competitors to fully understand and copy.</em></li>
+                    <li><strong>Complexity:</strong> Even if elements are known, their precise combination is difficult to replicate without subtle errors. <em>Example: Toyota's production system, a complex network of interdependent practices, is difficult to copy perfectly even if individual components are understood.</em></li>
+                    <li><strong>Tacit Knowledge:</strong> Knowledge that is hard to explain or transfer, learned best by doing under expert guidance. <em>Example: The specialized craftsmanship and intuitive design sense in high-end luxury watchmaking that cannot be easily codified or taught.</em></li>
+                    <li><strong>Resource Mobility Barriers:</strong> Factors preventing key resources (talented employees, crucial suppliers) from being lured away by competitors. <em>Example: Long-term exclusive contracts with rare raw material suppliers, or highly specialized R&D teams with deep institutional knowledge and strong internal bonds.</em></li>
+                    <li><strong>Property Rights:</strong> Legal protections (patents, copyrights) or exclusive access to physical resources (mining rights, real estate). <em>Example: Pfizer's patent on a blockbuster drug preventing generic competition for a period, or a diamond company's exclusive mining rights to a rich deposit.</em></li>
+                    <li><strong>Activity Systems:</strong> The inherent complexity and interconnectedness of a firm's unique activity system makes it difficult for rivals to copy. <em>Example: Zara's fast-fashion supply chain, where rapid design-to-retail cycle is enabled by a tightly integrated network of design, manufacturing, and distribution activities that are difficult to disaggregate and replicate.</em></li>
                 </ul>
 
                 <!-- LLM: Isolating Mechanism Brainstormer -->
@@ -456,6 +456,7 @@
 
             // LLM Integration Functions
             const apiKey = "AIzaSyB2OQkmPmEcJM1FX6r8kOm0WWmKq2cTOCM"; // API key will be provided at runtime by Canvas
+            const resourceEvalButton = document.getElementById('evaluate-resource-btn');
 
             async function callGeminiAPI(prompt, responseSchema = null) {
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
